tambah env api base url

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
 # Recommended for most uses
 DATABASE_URL=postgres://neondb_owner:npg_Aq3CJehVQO4Y@ep-silent-thunder-a1h2z8al-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 
